--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     alias(libs.plugins.android.application)
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -41,6 +42,12 @@ dependencies {
 
     // Para gráficos (estadísticas)
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+
+    // Firebase BOM (Bill of Materials) - gestiona versiones de todas las librerías de Firebase
+    implementation platform(libs.firebase.bom)
+    implementation libs.firebase.auth
+    implementation libs.firebase.firestore
+    implementation libs.firebase.messaging
 
     // Testing
     testImplementation libs.junit
